tests/expectations/compiler/statements/loop_non_literal_bound_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ECMP0376008]: This loop bound could not be determined at compile time.
    --> compiler-test:11:28
     |
  11 |         for i:u64 in 0u64..amount {
     |                            ^^^^^^"""]
